--- a/html/contact.html
+++ b/html/contact.html
@@ -16,6 +16,7 @@
 	</head>
 <body>
     <nav id="menu-h">
+	    <p> adicionar descição </p>
         <div class="logo"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHMXwELAuK6JA/profile-displayphoto-shrink_200_200/0/1617722490977?e=1644451200&v=beta&t=NSJpVAY8xu0t6ox5-aACxMWE--0s1BucEas5Lxwe6ZY" height="40" alt="Henrique Tagashira"/></div>
         <ul>
           <li><a href="./homepage.html">Home</a></li>
