--- a/html/contact.html
+++ b/html/contact.html
@@ -21,7 +21,7 @@
           <li><a href="./homepage.html">Home</a></li>
           <li><a href="./ex-modulo7.html">News</a></li>
           <li><a href="./sites.html">Site </a></li>
-          <li><a href="./identidade_visual.html">Identidade Visual</a></li>
+          <li><a href="./identidade_visual.html" type="">Identidade Visual</a></li>
           <li><a href="./midias.html">Mídias Sociais</a></li>
           <li style="float:right"><a class="active" href="./contact.html">Contact</a></li>
         </ul>
